# Azure-Sphere-Home-Process-Controller

./: .gitignore  .gitmodules  LICENSE  README.md
Addons/Input/case/: bottom.ipt  input_assembly.iam  top.ipt
Addons/Input/case/stl/: bottom.stl  top.stl
Addons/Input/code/: code.ino
Addons/Input/electronics/input_board/: input_board-cache.lib  input_board.kicad_pcb  input_board.kicad_pcb-bak  input_board.sch
Addons/Input/input_board/: input_board.bak  input_board.sch
Addons/Output/case/: DIN_mount.ipt  SHCS M3-20.ipt  bottom.ipt  output_assembly.iam  top.ipt
Addons/Output/case/stl/: bottom.stl  top.stl
Addons/Output/code/: code.ino
Addons/Output/electronics/output_board/: output_board.kicad_pcb  output_board.kicad_pcb-bak
Addons/Output/output_board/: output_board-cache.lib  output_board.bak  output_board.sch
Controller/case/: 4Digit_7Segment_LED_Display v8.ipt  BAR1_Fusion_sp_5EABBA22.ipt  Board_Geoms_8195.iam  D1_LED_D5.0mm_5EABBA34.ipt  D2_LED_D5.0mm_5EABBC42.ipt  D3_LED_D5.0mm_5EABBA58.ipt  D4_LED_D5.0mm_5EABBD40.ipt  D5_LED_D5.0mm_5EABBA7C.ipt  D6_LED_D5.0mm_5EABBA8E.ipt  PCB_Sketch_8195.ipt  Pcb_8195.ipt  SW1_SW_PUSH_6mm_h8mm_5EABDB7D.ipt  SW2_SW_PUSH_6mm_h8mm_5EABDB9C.ipt  Step_Models_8195.iam  Top_8195.iam  Turn knob.ipt  assembly.iam  button.ipt  case_bottom.ipt  case_top.ipt  din_clip_01.stl  electronic_holder.ipt  panel.iam
Controller/case/stl/: button.stl  case_bottom.stl  case_top.stl  electronic_holder.stl
Controller/code/Azure_Controller/Azure_Controller/: .gitignore  launch.vs.json
Controller/code/Azure_Controller/Azure_Controller/HighLevelCore/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  applibs_versions.h  cloud.c  cloud.h  common.h  config_structs.h  eventloop_timer_utilities.c  eventloop_timer_utilities.h  http_utilities.c  http_utilities.h  launch.vs.json  mailbox_utilities.c  mailbox_utilities.h  main.c  mqtt_utilities.c  mqtt_utilities.h  network_utilities.c  network_utilities.h  parson.c  parson.h  website.h
Controller/code/Azure_Controller/Azure_Controller/RealTimeCore/: CMakeLists.txt  CMakeSettings.json  FreeRTOSConfig.h  app_manifest.json  buttons.c  buttons.h  common.c  common.h  config.c  config.h  control.c  control.h  eeprom.c  eeprom.h  global_state.c  global_state.h  knob.c  knob.h  launch.vs.json  leds.c  leds.h  mailbox.c  mailbox.h  main.c  periph.c  periph.h  seg.c  seg.h  soft_spi.c  soft_spi.h
Controller/code/Azure_Controller/Azure_Controller/RealTimeCore/intercomm/: intercore.c  intercore.h  logical-dpc.c  logical-dpc.h  logical-intercore.c  logical-intercore.h  mt3620-baremetal.h
Controller/controller_board/: Azure_Sphere.lib  controller_board.bak  controller_board.kicad_pcb-bak  controller_board.net  controller_board.sch  fp-info-cache
Controller/controller_panel/: controller_panel.kicad_pcb  controller_panel.kicad_pcb-bak  fp-info-cache
Controller/electronics/controller_board/: controller_board-cache.lib  controller_board.kicad_pcb
Controller/electronics/controller_board/Azure_Sphere.pretty/: Avnet_Azure_Sphere.kicad_mod
Controller/electronics/controller_panel/: controller_panel-cache.lib  controller_panel.bak  controller_panel.sch
